--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,6 @@
 
 
 body{
-  background-image: url(1.JPG);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
 }
@@ -64,11 +61,10 @@ header{
   padding-left: 5px;padding-right: 5px;
   padding-top: 35px;padding-bottom: 20px;
 }
-section{
+.home{
   height: 570px;
   display: flex;
   flex-direction: row;
-
 }
 .image{width: 30%;}
 .image img{height: 300px;
@@ -96,9 +92,35 @@ section{
   transform: scale(1.5,1.5);
 }
 .main p{text-align: justify; padding: 2%;}
+.cvsection{
+  background-image: url(../image/1.JPG);
+    background-size: cover;
+  color: yellow;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 600px;
+}
+.milan{
+  text-align: center;
+  font-size: 2em;
+}
+
+.cv{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.aboutme{
+  width: 50%;
+}
+.education{
+  width: 50%;
+
+}
 
 footer{
-  margin-top:20px;
+
   color:#ffffff;
   background-color:#e8491d;
   width: 100%;
@@ -120,7 +142,7 @@ footer{
   padding-top: 7%;
   padding-left: 10%;
 }
-.form input[type=text] {
+.form {
     width: 100%;
     padding: 5px 5px;
     margin: 8px 0;
@@ -140,7 +162,7 @@ textarea {
     font-size: 16px;
     resize: none;
 }
-.form input {
+.form{
   padding-left: 10%;
 
 }
