--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,9 @@ header{
   padding-top: 35px;padding-bottom: 20px;
 }
 .home{
-  height: 570px;
+  background-image: url(../image/1.JPG);
+  background-size: cover;
+  height: 592px;
   display: flex;
   flex-direction: row;
 }
@@ -94,12 +96,12 @@ header{
 .main p{text-align: justify; padding: 2%;}
 .cvsection{
   background-image: url(../image/1.JPG);
-    background-size: cover;
+  background-size: cover;
   color: yellow;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 600px;
+  height: 592px;
 }
 .milan{
   text-align: center;
@@ -116,9 +118,40 @@ header{
 }
 .education{
   width: 50%;
-
 }
-
+.contact{
+  background-image: url(../image/1.JPG);
+  background-size: cover;
+  height: 592px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.form{
+  width: 50%;
+}
+form{
+  display: block;
+  margin: auto;
+  padding: 20px;
+  padding-left: 60px;
+}
+label{
+  font-size: 1.2em;
+  color: white;
+}
+input{
+  width: 80%;
+  height: 30px;
+}
+textarea{
+  width: 80%;
+}
+.tel{
+  width: 50%;
+  padding: 20px;
+  color: white;
+}
 footer{
 
   color:#ffffff;
@@ -129,76 +162,4 @@ footer{
   opacity: 0.8;
   flex-direction: row;
   text-align: center;
-}
-.tel{
-  width: 20%;
-  color: white;
-  padding-top: 10%;
-  padding-left:10%;
-}
-.tel h3{text-align: center;}
-.form{
-  width:45%;
-  padding-top: 7%;
-  padding-left: 10%;
-}
-.form {
-    width: 100%;
-    padding: 5px 5px;
-    margin: 8px 0;
-    box-sizing: border-box;
-}
-.form label {
-  color: #e8491d;
-}
-textarea {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    font-size: 16px;
-    resize: none;
-}
-.form{
-  padding-left: 10%;
-
-}
-input[type=submit] {
-    width: 100%;
-    background-color:#35424a;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-input[type=submit]:hover {
-    background-color:#e8491d;
-}
-.search{
-  padding-left: 25%;
-  padding-top: 25px;
-}
-.search input[type=text] {
-    width: 130px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    padding: 4px 10px 10px 30px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-.search input[type=text]:focus {
-    width: 100%;
-}
-.about{
-  color: white;
-  width: 30%;
-  padding-left: 30%;
 }
