--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,13 @@ header{
   opacity: 0.7;
 
 }
-
+.nav{
+  width:50%;
+}
 
 .nav ul{
   display: inline;
-  padding: 0%;
+
 }
 
 .nav ul li{
@@ -55,6 +57,16 @@ header{
   text-decoration: none;
   font-size: 1.255em;
 }
+.search{
+  width: 30%;
+}
+.search input{
+  width: 50%;
+}
+.search input:hover{
+
+}
+
 
 .homeblack:hover{
   background-color: #e8491d;
@@ -69,8 +81,9 @@ header{
   flex-direction: row;
 }
 .image{width: 30%;}
-.image img{height: 300px;
-  width: 300px;
+.image img{
+  height: 300px;
+    width: 300px;
     border-radius: 50%;
     opacity: 0.5;
     display: block;
@@ -160,13 +173,50 @@ textarea{
 .foto img{
   height: 80%;
   width: 80%;
-
+  opacity: 0.5;
+}
+.foto img:hover{
+  opacity: 1;
 }
 .bio{
   background-image: url(../image/1.JPG);
   background-size: cover;
+  width: 100%;
   height: 592px;
+  display: flex;
+  flex-direction: row;
+  color: white;
 }
+.description{
+  width: 60%;
+}
+.description h1{
+  font-size: 3em;
+  text-align: center;
+}
+.description p{
+  font-size: 1.8em;
+  padding: 20px;
+  text-align: justify;
+}
+.bike{
+  width: 40%;
+}
+.bike img{
+  height: 60%;
+  width: 60%;
+  border-radius: 100px;
+  display: block;
+  margin: auto;
+  padding: 80PX;
+
+}
+.bike img:hover{
+  transition: 4s;
+  transform: rotateY(180deg);
+  opacity: 0.5;
+}
+
 footer{
   color:#ffffff;
   background-color:#e8491d;
