--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,8 @@ header{
   transition: 4s;
   transform: scale(1.5,1.5);
 }
-.main p{text-align: justify; padding: 5%;
-font-size: 1em;
+.main p{text-align: justify;
+font-size: 1.5em;
 width: 100%;
 }
 .cvsection{
@@ -312,6 +312,7 @@ header{
   width: 100;
   display: flex;
   flex-direction: column;
+  height:auto;
 }
 .image{
   width: 100%;
@@ -326,7 +327,7 @@ header{
 }
 .main p{
   width: 250px;
-  padding: 10px;
+  padding: 5px;
 }
 .bio{
   width: 100%;
